<resources>
    <string name="app_name">Daily Bucket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="add_item">Add Item</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="today">TODAY</string>
    <string name="mandatory_field_error">Field is mandatory!!</string>
</resources>