<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Days">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/app_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Days"/>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/other_days_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_layout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:text="@string/yesterday"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/tomorrow"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:text="@string/today"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/other_days_layout"
        app:layout_constraintRight_toRightOf="@id/other_days_layout"
        app:layout_constraintLeft_toLeftOf="@id/other_days_layout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_item"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>